@@ -8,6 +8,15 @@
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+            -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true
+            -Dglass.platform=Monocle -Dmonocle.platform=Headless -Dprism.order=sw -Dprism.text=t2k
+            -Dtestfx.setup.timeout=2500 -Dprism.verbose=true
+          </argLine>
+        </configuration>
         <groupId>org.apache.maven.plugins</groupId>
         <version>${surefire.version}</version>
       </plugin>
@@ -68,12 +77,12 @@
         <version>${jacoco.version}</version>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.3.1</version>
         <configuration>
           <doclint>all,-missing</doclint>
         </configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <version>3.3.1</version>
       </plugin>
     </plugins>
   </build>
@@ -123,7 +132,7 @@
         </exclusion>
       </exclusions>
       <groupId>net.synedra</groupId>
-      <version>0.1.13</version>
+      <version>0.2.1</version>
     </dependency>
     <dependency>
       <artifactId>ikonli-javafx</artifactId>
@@ -150,7 +159,7 @@
     <dependency>
       <artifactId>dotenv-java</artifactId>
       <groupId>io.github.cdimascio</groupId>
-      <version>2.2.0</version>
+      <version>2.2.3</version>
     </dependency>
     <dependency>
       <artifactId>hibernate-core</artifactId>
@@ -190,10 +199,44 @@
       <version>${jacoco.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>4.0.0</version>
+      <groupId>org.mockito</groupId>
       <scope>test</scope>
+      <version>4.1.0</version>
+    </dependency>
+    <dependency>
+      <artifactId>testfx-core</artifactId>
+      <groupId>org.testfx</groupId>
+      <scope>test</scope>
+      <version>${testfx.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>testfx-junit5</artifactId>
+      <groupId>org.testfx</groupId>
+      <scope>test</scope>
+      <version>${testfx.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>hamcrest</artifactId>
+      <groupId>org.hamcrest</groupId>
+      <scope>test</scope>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
+      <artifactId>mvvmfx-testing-utils</artifactId>
+      <groupId>de.saxsys</groupId>
+      <version>1.8.0</version>
+    </dependency>
+    <dependency>
+      <artifactId>openjfx-monocle</artifactId>
+      <groupId>org.testfx</groupId>
+      <scope>test</scope>
+      <version>jdk-12.0.1+2</version>
+    </dependency>
+    <dependency>
+      <artifactId>h2</artifactId>
+      <groupId>com.h2database</groupId>
+      <version>2.0.202</version>
     </dependency>
   </dependencies>
   <groupId>org.otp-r11</groupId>
@@ -204,11 +247,12 @@
   <properties>
     <jacoco.version>0.8.7</jacoco.version>
     <javafx.version>17.0.0.1</javafx.version>
-    <junit.version>5.8.1</junit.version>
+    <junit.version>5.8.2</junit.version>
     <log4j.version>2.14.1</log4j.version>
     <lombok.version>1.18.22</lombok.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <surefire.version>3.0.0-M5</surefire.version>
+    <testfx.version>4.0.16-alpha</testfx.version>
   </properties>
 
   <version>1.0-SNAPSHOT</version>
